build commit changed

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Run a multi-line script
         run: |
           npm ci
-          ng build ngx-split-progressbar
+          npm run build
