--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "build:ngx-split-progressbar": "ng build ngx-split-progressbar",
+    "build": "ng build ngx-split-progressbar && ng build split-progressbar-app",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
