--- a/projects/ngx-split-progressbar/package.json
+++ b/projects/ngx-split-progressbar/package.json
@@ -1,5 +1,9 @@
 {
   "name": "ngx-split-progressbar",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rdandnayak/ngx-split-progressbar"
+  },
   "version": "0.0.2",
   "peerDependencies": {
     "@angular/common": "^11.2.13",
