--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
       - name: Code Coverage Report
         uses: romeovs/lcov-reporter-action@v0.2.11
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           lcov-file: ./coverage/lcov.info
+          registry-url: 'https://registry.npmjs.org'
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
@@ -37,4 +39,7 @@ jobs:
           npm run build
           npm run test
           npm run lint
+          npm publish
+        env: 
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
