publishing another repo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           npm run build
           npm run test
           npm run lint
-          npm publish
+          npm publish dist/ngx-split-progressbar
         env: 
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
