--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,6 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          registry-url: 'https://registry.npmjs.org'
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
@@ -34,14 +31,5 @@ jobs:
           npm ci
           #npm run test ngx-split-progressbar
           #npm run lint ngx-split-progressbar
-          
-      - uses: mikeal/merge-release@master
-      - name: publish
-        run: npm run build:lib
-        env: 
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEPLOY_DIR: dist/ngx-split-progressbar
-          SRC_PACKAGE_DIR: projects/ngx-split-progressbar
+          #npm run build:lib
 
