--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           registry-url: "https://npm.pkg.github.com"
-      - run: npm publish
+      - run: npm publish dist/ngx-split-progressbar
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
