--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,11 @@ jobs:
           npm publish dist/ngx-split-progressbar
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-      - uses: actions/setup-node@v2
-        with:
-          registry-url: "https://npm.pkg.github.com"
-          scope: "@rdandnayak"
-      - name: Publish to GitHub
-        run: npm publish dist/ngx-split-progressbar
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      # - uses: actions/setup-node@v2
+      #   with:
+      #     registry-url: "https://npm.pkg.github.com"
+      #     scope: "@rdandnayak"
+      # - name: Publish to GitHub
+      #   run: npm publish dist/ngx-split-progressbar
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
